--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\nn\AppData\Local\Temp\testng-eclipse--2053168646\testng-customsuite.xml</span>
+                    <span>C:\Users\nn\AppData\Local\Temp\testng-eclipse-913242608\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.DemoTest" hash-for-method="openMyBlog">openMyBlog</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.DemoTest2" hash-for-method="openMyBlog">openMyBlog</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,7 +119,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.DemoTest</span>
+              <span class="class-name">tests.DemoTest2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nn\AppData\Local\Temp\testng-eclipse--2053168646\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\nn\AppData\Local\Temp\testng-eclipse-913242608\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +143,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.DemoTest&quot;/&gt;
+      &lt;class name=&quot;tests.DemoTest2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,13 +186,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'openMyBlog')
-data.setCell(0, 2, 'tests.DemoTest')
-data.setCell(0, 3, 51);
+data.setCell(0, 2, 'tests.DemoTest2')
+data.setCell(0, 3, 22);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 51 ms</span>
+              <span class="suite-total-time">Total running time: 22 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -206,7 +206,7 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">openMyBlog</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">HELLO</span>
+                <span class="reporter-method-output">HELLO As an TE1 updated code in TE1 terminal</span>
                 <span class="reporter-method-output">HELLO I am testing Maven</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
@@ -225,7 +225,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.DemoTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.DemoTest2</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">openMyBlog</span>
                 <span class="method-start">0 ms</span>
