--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,3 @@
-<h2>Reporter output</h2><table><tr><td>HELLO</td></tr>
+<h2>Reporter output</h2><table><tr><td>HELLO As an TE1 updated code in TE1 terminal</td></tr>
 <tr><td>HELLO I am testing Maven</td></tr>
 </table>
